--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    <canvas id="canvas"></canvas>
+    <canvas id="canvas">
+        
+    </canvas>
     <script src="./app.js"></script>
 </body>
 </html>
